...
		android:paddingLeft="10dip"
		android:paddingRight="10dip"
		android:scrollbars="vertical" android:layout_width="wrap_content">
			
		<TableRow>
			<TextView android:text="Nickname:" android:paddingRight="10dip" android:gravity="right|center_vertical" android:textAppearance="?android:attr/textAppearanceMedium" />
			<EditText android:id="@+id/nickname" android:hint="My work key" android:layout_height="wrap_content" android:singleLine="true" />
		</TableRow>
	
		<TableRow>
			<TextView android:text="Type:" android:paddingRight="10dip" android:textAppearance="?android:attr/textAppearanceMedium" android:gravity="bottom|right" android:layout_gravity="center_vertical"/>
			<RadioGroup
				android:id="@+id/key_type"
...
			</LinearLayout>
			<EditText android:id="@+id/password2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:password="true" android:singleLine="true"/>
		</TableRow>
		
		<CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/unlock_at_startup" android:text="Unlock when ConnectBot starts"/>
		
	    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/save" android:text="Save" android:enabled="false"/>
	
	</TableLayout>
</ScrollView>
