<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ConnectBot: simple, powerful, open-source SSH client for Android
  ~ Copyright 2015 Kenny Root, Jeffrey Sharkey
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:connectbot="http://schemas.android.com/apk/res-auto"
	>

	<item android:id="@+id/add_new_key_icon"
		android:icon="@drawable/ic_add_box"
		android:title="@string/pubkey_add_new"
		connectbot:showAsAction="ifRoom"
		/>

	<item android:id="@+id/import_existing_key_icon"
		android:icon="@drawable/ic_folder_open"
		android:title="@string/pubkey_import_existing"
		connectbot:showAsAction="ifRoom"
		/>

</menu>
