<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ConnectBot: simple, powerful, open-source SSH client for Android
 * Copyright 2007 Kenny Root, Jeffrey Sharkey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	>

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		/>

	<TextView
		android:id="@+id/empty"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:gravity="center"
		android:text="@string/pubkey_list_empty"
		android:textAppearance="?android:attr/textAppearanceMedium"
		/>
</LinearLayout>
