<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * ConnectBot: simple, powerful, open-source SSH client for Android
 * Copyright 2007 Kenny Root, Jeffrey Sharkey
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingEnd="10dip"
	android:paddingLeft="10dip"
	android:paddingRight="10dip"
	android:paddingStart="10dip">

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/pubkey_touch_hint"
		android:textAppearance="?android:attr/textAppearanceMedium"/>

	<org.connectbot.util.EntropyView
		android:id="@+id/entropy"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="10dip"
		android:layout_marginTop="10dip"
		android:background="#666666ff"
		android:drawingCacheQuality="auto"/>
</LinearLayout>
